移除无用模板引入

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,8 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+WECHAT_MINI_PROGRAM_APPID=
+WECHAT_MINI_PROGRAM_SECRET=
+WECHAT_MINI_PROGRAM_TOKEN=
+WECHAT_MINI_PROGRAM_AES_KEY=
