--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "orangehill/iseed": "^2.5"
+        "orangehill/iseed": "^2.5",
+        "overtrue/laravel-wechat": "~4.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
