管理员添加头像;调整后台部分样式, 提升体验

--- a/.env.example
+++ b/.env.example
@@ -40,4 +40,4 @@ WECHAT_MINI_PROGRAM_SECRET=
 WECHAT_MINI_PROGRAM_TOKEN=
 WECHAT_MINI_PROGRAM_AES_KEY=
 
-ARCANEDEV_LOGVIEWER_MIDDLEWARE=auth.admin
+ARCANEDEV_LOGVIEWER_MIDDLEWARE=
