--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "arcanedev/log-viewer": "4.4.*",
+        "barryvdh/laravel-cors": "^0.11.0",
         "barryvdh/laravel-ide-helper": "^2.4",
         "chenhua/laravel5-markdown-editor": "^1.0",
         "fideloper/proxy": "~3.3",
