--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "devDependencies": {
         "axios": "^0.17.1",
+        "babel-plugin-component": "^1.1.1",
+        "babel-preset-es2015": "^6.24.1",
         "bootstrap-sass": "^3.3.7",
         "browser-sync": "^2.24.4",
         "browser-sync-webpack-plugin": "^2.2.2",
