--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ca51d7538a642b48b071",
+    "/css/app.css": "/css/app.css?id=3509a5868c4055c3e2dd"
 }
