--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "ajv": "^6.5.0",
         "element-ui": "^2.3.9",
         "npm": "^6.0.1",
         "vue-router": "^3.0.1",
