--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,14 @@
         "chenhua/laravel5-markdown-editor": "^1.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "^1.3",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.0",
         "mews/captcha": "^2.2",
         "orangehill/iseed": "^2.5",
-        "overtrue/laravel-wechat": "~4.0"
+        "overtrue/laravel-wechat": "~4.0",
+        "predis/predis": "^1.1",
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
