--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,24 @@
         "php": ">=7.0.0",
         "arcanedev/log-viewer": "4.4.*",
         "barryvdh/laravel-cors": "^0.11.0",
-        "barryvdh/laravel-ide-helper": "^2.4",
         "chenhua/laravel5-markdown-editor": "^1.0",
+        "delight-im/ids": "^1.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/horizon": "^1.3",
+        "laravel/passport": "~4.0",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.0",
         "mews/captcha": "^2.2",
         "orangehill/iseed": "^2.5",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
+        "toplan/laravel-sms": "^2.6",
         "torann/geoip": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "doctrine/dbal": "^2.8",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
