--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=laravel-blog
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
