--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^2.2",
+        "orangehill/iseed": "^2.6",
         "predis/predis": "^1.1",
         "torann/geoip": "^1.0"
     },
