--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "aliyuncs/oss-sdk-php": "^2.3",
         "arcanedev/log-viewer": "^4.6",
         "delight-im/ids": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^2.2",
         "orangehill/iseed": "^2.6",
+        "overtrue/laravel-pinyin": "^4.0",
+        "overtrue/laravel-wechat": "^5.0",
         "predis/predis": "^1.1",
+        "simplesoftwareio/simple-qrcode": "^2.0",
+        "toplan/laravel-sms": "^2.6",
         "torann/geoip": "^1.0"
     },
     "require-dev": {
