MiniProgramController 删除无用注释

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,38 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# 阿里云OSS
+ALI_OSS_KEY=
+ALI_OSS_SECRET=
+ALI_OSS_END_POINT=
+ALI_OSS_BUCKET=
+
+# CDN资源地址
+CDN_RESOURCE_PATH=
+
+# 百度地图API
+BAIDU_MAP_KEY=
+
+# 微信小程序
+WECHAT_MINI_PROGRAM_APPID=
+WECHAT_MINI_PROGRAM_SECRET=
+
+# 微信公众号
+WECHAT_OFFICIAL_ACCOUNT_APPID=
+WECHAT_OFFICIAL_ACCOUNT_SECRET=
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=
+WECHAT_OFFICIAL_ACCOUNT_AES_KEY=
+
+# 微信商户
+WECHAT_PAYMENT_APPID=
+WECHAT_PAYMENT_MCH_ID=
+WECHAT_PAYMENT_KEY=
+WECHAT_PAYMENT_CERT_PATH=
+WECHAT_PAYMENT_KEY_PATH=
+WECHAT_PAYMENT_NOTIFY_ORDER=
+WECHAT_PAYMENT_NOTIFY_REFUND=
+
+# HTTPS证书
+HTTPS_CERT_PATH=
+HTTPS_KEY_PATH=
