增加手机号码绑定

--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,8 @@ WECHAT_PAYMENT_NOTIFY_REFUND=
 # HTTPS证书
 HTTPS_CERT_PATH=
 HTTPS_KEY_PATH=
+
+# LeanCloud短信
+PHPSMS_LEAN_CLOUD_APPID=
+PHPSMS_LEAN_CLOUD_APPKEY=
+PHPSMS_LEAN_CLOUD_MASTER_KEY=
