--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "aliyuncs/oss-sdk-php": "^2.3",
         "arcanedev/log-viewer": "^4.6",
         "delight-im/ids": "^1.0",
@@ -16,6 +17,7 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
+        "leancloud/leancloud-sdk": "^0.9.0",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^2.2",
         "orangehill/iseed": "^2.6",
@@ -24,8 +26,7 @@
         "predis/predis": "^1.1",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "toplan/laravel-sms": "^2.6",
-        "torann/geoip": "^1.0",
-        "ext-json": "*"
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
@@ -52,7 +53,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "extends"
         ],
         "files": [
             "app/helpers.php"
