--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-curl": "^7.1",
         "ext-json": "*",
         "aliyuncs/oss-sdk-php": "^2.3",
         "arcanedev/log-viewer": "^4.6",
@@ -16,6 +17,7 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "leancloud/leancloud-sdk": "^0.9.0",
@@ -27,8 +29,7 @@
         "predis/predis": "^1.1",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "toplan/laravel-sms": "^2.6",
-        "torann/geoip": "^1.0",
-        "ext-curl": "^7.1"
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
