--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
         "ext-json": "*",
         "aliyuncs/oss-sdk-php": "^2.3",
         "arcanedev/log-viewer": "^4.6",
+        "barryvdh/laravel-snappy": "^0.4.4",
         "delight-im/ids": "^1.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
