--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "predis/predis": "^1.1",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "toplan/laravel-sms": "^2.6",
-        "torann/geoip": "^1.0"
+        "torann/geoip": "^1.0",
+        "ext-gd": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
