--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "simplesoftwareio/simple-qrcode": "^2.0",
         "toplan/laravel-sms": "^2.6",
         "torann/geoip": "^1.0",
-        "ext-gd": "*"
+        "ext-gd": "*",
+      "ext-openssl": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
