--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-curl": "^7.1",
+        "ext-gd": "*",
         "ext-json": "*",
+        "ext-openssl": "*",
         "aliyuncs/oss-sdk-php": "^2.3",
         "arcanedev/log-viewer": "^4.6",
         "barryvdh/laravel-snappy": "^0.4.4",
@@ -19,6 +21,7 @@
         "fideloper/proxy": "^4.0",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "iidestiny/laravel-filesystem-oss": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.2",
         "laravel/passport": "^7.3",
@@ -32,9 +35,7 @@
         "predis/predis": "^1.1",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "toplan/laravel-sms": "^2.6",
-        "torann/geoip": "^1.0",
-        "ext-gd": "*",
-      "ext-openssl": "*"
+        "torann/geoip": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
