--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "mews/captcha": "^2.2",
         "orangehill/iseed": "^2.6",
         "overtrue/laravel-pinyin": "^4.0",
+        "overtrue/laravel-socialite": "~2.0",
         "overtrue/laravel-wechat": "^5.0",
         "predis/predis": "^1.1",
         "simplesoftwareio/simple-qrcode": "^2.0",
