尝试增加微信APP登录/APP支付;

--- a/.env.example
+++ b/.env.example
@@ -96,3 +96,19 @@ OSS_ACCESS_KEY=
 OSS_ACCESS_SECRET=
 OSS_BUCKET=
 OSS_ENDPOINT=
+
+# Wechat
+WECHAT_CLIENT_ID=
+WECHAT_CLIENT_SECRET=
+
+# 支付宝
+ALI_APP_ID=
+ALI_PUBLIC_KEY=
+ALI_PRIVATE_KEY=
+
+# 微信支付
+WECHAT_APP_ID=
+WECHAT_MINIAPP_ID=
+WECHAT_APPID=
+WECHAT_MCH_ID=
+WECHAT_KEY=
