优化微信登录, 针对老用户做了兼容处理

--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/passport"
+            ]
         }
     },
     "autoload": {
