调整 易签宝service

--- a/.env.testing
+++ b/.env.testing
@@ -86,8 +86,9 @@ PHPSMS_LEAN_CLOUD_MASTER_KEY=dErUOqtxagPLgdrOIx2533KK
 PHPSMS_LEAN_CLOUD_MASTER_KEY=
 
 # esign
-ESIGN_APPID=7438820556
-ESIGN_SECRET=6b3175f1144dc2f57ea6e685e25117d5
+ESIGN_DEBUG=false
+ESIGN_APPID=5111575104
+ESIGN_SECRET=2fa720c5a933f62b144472156b359882
 ESIGN_JAVA_SERVER=http://122.51.59.13:8081
 ESIGN_BUSID=
 ESIGN_SCENEID=
